Text Gap Fix

--- a/src/Components/Sections/UmPouquinhoSobreMim/AboutMe/page.module.css
+++ b/src/Components/Sections/UmPouquinhoSobreMim/AboutMe/page.module.css
@@ -57,11 +57,6 @@
     padding-left: 90px;
   }
 
-  
-  .text > p {
-    padding-bottom: 30px;
-  }
-
   .decoration6 {
     width: 288px;
   }
@@ -75,10 +70,6 @@
   
   .text {
     padding-left: 40px;
-  }
-
-  .text > p {
-    padding-bottom: 20px;
   }
   
   .decoration6 {
